[package]
name = "trim-graph"
version = "0.1.0"
edition = "2021"
description = "A simple tool to remove segments and links from GFA files that are not covered by paths."

[dependencies]
itertools = "0.13.0"
rayon = "1.10.0"
clap = { version = "4.5.20", features = ["derive", "cargo"] }

# Logging and error management
log        = "0.4"
env_logger = "0.10"
regex = "1.11.0"
